test/neg/adt3.msmt_
; Sorts
(declare-sort Vec 1)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= l1 (mkCons x xs)) (= l1 l3)) (= mkNil (tail l3)))))

